--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
   "dependencies": {
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
-  }
+  },
+  "browserslist": [
+    "> 0.25%, last 2 versions, Firefox ESR, not dead"
+  ]
 }
